<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newera.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_createTaskFragment"
            app:destination="@id/createTaskFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.newera.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.newera.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/createTaskFragment"
        android:name="com.example.newera.ui.create.CreateTaskFragment"
        android:label="fragment_create_task"
        tools:layout="@layout/fragment_create_task">
        <action
            android:id="@+id/action_createTaskFragment_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.newera.ui.setting.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/successAuth"
        android:name="com.example.newera.auth.SuccessAuth"
        android:label="fragment_succes_auth"
        tools:layout="@layout/activity_success_auth" />

</navigation>